<resources>
    <string name="app_name">Mareu</string>
    <string name="Delegate" />
    <string name="add_a_new_meeting">Add a new meeting</string>
    <string name="type_the_delegate">Type the delegate</string>
    <string name="add_delegate">Add delegate</string>
    <string name="type_the_location">Type the location</string>
    <string name="time">Time</string>
    <string name="type_to_select_the_date">Type to select the date</string>
    <string name="type_the_subject">Type the subject</string>
    <string name="back_button">Back button</string>
    <string name="add">ADD</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="meeting_subject" />
    <string name="meeting_date" />
    <string name="add_a_meeting_room" />
    <string name="meeting_time" />
    <string name="add_a_duration" />
    <string name="about_the_meeting" />
    <string name="create_meeting" />
    <string name="meeting_time_place" />
    <string name="delegate" />
    <string name="delete" />
    <string name="avatar" />
    <string name="duration_of_the_meeting" />
    <string name="double_dot" />
    <string name="cancel" />
    <string name="ok" />
    <string name="meeting_room_filter" />
    <string name="meeting_room_available" />
    <string name="meeting_in_the_x_room" />
    <string name="at_x" />
    <string name="meeting_room_unavailable" />
    <string name="meeting_from_x_to_x" />
    <string name="no_more_info" />
    <string name="unavailable_message" />
    <string name="until" />
    <string name="filter_by_location" />
    <string name="filter_by_date" />
    <string name="clear_filter" />
    <string name="filter_meetings" />
</resources>
