<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ItemImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="20dp"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/todo">

    </ImageView>

    <TextView
        android:id="@+id/subject_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="-15dp"
        android:layout_toEndOf="@+id/ItemImageView"
        android:text="@string/sujet"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/ItemImageView"
        android:layout_marginLeft="-15dp">

    </TextView>

    <TextView
        android:id="@+id/date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/date"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/subject_txt"
        android:layout_marginLeft="5dp"
        android:layout_toEndOf="@+id/subject_txt" />

    <TextView
        android:id="@+id/time_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/date_txt"
        android:text="@string/time"
        android:textStyle="bold"
        android:layout_toRightOf="@+id/date_txt"
        android:layout_marginLeft="5dp">

    </TextView>


    <TextView
        android:id="@+id/location_txt"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_alignBottom="@+id/time_txt"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:text="@string/location"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_toRightOf="@id/time_txt"
        android:layout_marginLeft="5dp"
        android:layout_toEndOf="@id/time_txt" />


    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:contentDescription="@string/todo"
        android:padding="10dp"
        android:src="@drawable/ic_delete_black_24dp">

    </ImageButton>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/emails_recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subject_txt"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="-15dp"
        android:layout_toEndOf="@+id/ItemImageView"
        android:layout_toRightOf="@+id/ItemImageView"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


</RelativeLayout>